customer-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-pod
spec:
  selector:
    app: customer-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
